# myqqbot

./: .env  .env.dev  .env.prod  README.md  bot.py  global.json  nohup.out  pyproject.toml
src/assist/: img.json  pic.json  title.json  url.json  xzw.json
src/data/xiezhen/: rdxz612.jfif  rdxz6152.jfif  rdxz751.jfif  rdxz887.jfif
src/plugins/: biaoqingbao.py  bullshit_generator.py  chance.py  chat.py  code.py  get_fan_num.py  get_slice.py  get_xzw.py  help.py  jjz_generator.py  lunch.py  match.py  qa.py  qa_push.py  remake.py  remind.py  rp.py  run.py  schedule.py  schedule_push.py  slice.py  timer.py  voice.py  webapi.py  withdraw.py  xzw.py
